# Epoch

./: .gitignore  README.md  package.json  turbo.json  vercel.json
backend/: Dockerfile  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/routes/: admin.ts  epochs.ts  health.ts  metrics.ts  proof.ts  wallet.ts
backend/src/services/: epoch-builder.ts  indexer.ts
frontend/: MOTION_GUIDELINES.md  next.config.js  package.json  tailwind.config.js  vercel.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: claim-button.tsx  claim-stepper.tsx  dashboard-preview.tsx  empty-state.tsx  epoch-breakdown.tsx  epoch-table.tsx  flow-lines.tsx  flywheel-diagram.tsx  footer.tsx  kpi-card.tsx  live-metrics.tsx  metrics-grid.tsx  nav.tsx  navbar.tsx  providers.tsx  skeleton.tsx  tooltip.tsx  transparency-table.tsx  wallet-button.tsx
frontend/src/hooks/: useEpoch.ts  useEpochDetails.ts  useEpochs.ts  useMetrics.ts  useWalletEarnings.ts
frontend/src/lib/: utils.ts
infra/: docker-compose.yml
infra/alertmanager/: alertmanager.yml
infra/prometheus/: prometheus.yml
infra/prometheus/rules/: alerts.yml
keeper/: Dockerfile  package.json  tsconfig.json
keeper/src/: index.ts
keeper/src/services/: circuit-breaker.ts  (+4 more)
programs/: Anchor.toml  Cargo.toml
programs/controller/: Cargo.toml
programs/distributor/: Cargo.toml
programs/distributor/src/: error.rs  lib.rs  state.rs
programs/distributor/src/instructions/: admin.rs  claim.rs  fund_vault.rs  initialize.rs  mod.rs  publish_epoch.rs
(+24 files in other folders)
