[package]
name = "distributor"
version = "0.1.0"
description = "Merkle-based rewards distributor for SOL flywheel"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "distributor"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17"


